; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_att_protocol.c_attp_build_browse_cmd.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_att_protocol.c_attp_build_browse_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@L2CAP_MIN_OFFSET = common dso_local global i32 0, align 4
@GATT_OP_CODE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_3__* @attp_build_browse_cmd(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %9, align 8
  %11 = load i32, i32* @L2CAP_MIN_OFFSET, align 4
  %12 = sext i32 %11 to i64
  %13 = add i64 24, %12
  %14 = trunc i64 %13 to i32
  %15 = call i64 @osi_malloc(i32 %14)
  %16 = inttoptr i64 %15 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %16, %struct.TYPE_3__** %9, align 8
  %17 = icmp ne %struct.TYPE_3__* %16, null
  br i1 %17, label %18, label %47

18:                                               ; preds = %4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i64 1
  %21 = bitcast %struct.TYPE_3__* %20 to i32*
  %22 = load i32, i32* @L2CAP_MIN_OFFSET, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  store i32* %24, i32** %10, align 8
  %25 = load i32, i32* @L2CAP_MIN_OFFSET, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 8
  %28 = load i64, i64* @GATT_OP_CODE_SIZE, align 8
  %29 = add nsw i64 %28, 4
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 1
  store i64 %29, i64* %31, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @UINT8_TO_STREAM(i32* %32, i32 %33)
  %35 = load i32*, i32** %10, align 8
  %36 = load i32, i32* %6, align 4
  %37 = call i32 @UINT16_TO_STREAM(i32* %35, i32 %36)
  %38 = load i32*, i32** %10, align 8
  %39 = load i32, i32* %7, align 4
  %40 = call i32 @UINT16_TO_STREAM(i32* %38, i32 %39)
  %41 = load i32, i32* %8, align 4
  %42 = call i64 @gatt_build_uuid_to_stream(i32** %10, i32 %41)
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = add nsw i64 %45, %42
  store i64 %46, i64* %44, align 8
  br label %47

47:                                               ; preds = %18, %4
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  ret %struct.TYPE_3__* %48
}

declare dso_local i64 @osi_malloc(i32) #1

declare dso_local i32 @UINT8_TO_STREAM(i32*, i32) #1

declare dso_local i32 @UINT16_TO_STREAM(i32*, i32) #1

declare dso_local i64 @gatt_build_uuid_to_stream(i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
